--- a/nrakpo/src/main/resources/templates/home.html
+++ b/nrakpo/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 
 <div class="container-fluid">
     <div th:replace="fragments :: header"></div>
-    <h1 th:text="Login"></h1>
+    <h1 th:text="Home"></h1>
     <div th:if="${param.error}" class="login-error" th:text="Unable to login"></div>
     <div th:if="${param.logout}" class="logout-success" th:text="Logged out!"></div>
     <div th:replace="fragments :: photos"></div>
