--- a/nrakpo/src/main/resources/templates/login.html
+++ b/nrakpo/src/main/resources/templates/login.html
@@ -8,8 +8,8 @@
     <div class="container-fluid">
         <div th:replace="fragments :: header" ></div>
         <h1 th:text="Login"></h1>
-        <div th:if="${param.error}" class="login-error" th:text="Unable to login"></div>
-        <div th:if="${param.logout}" class="logout-success" th:text="Logged out!"></div>
+        <div th:if="${param.error}" class="login-error">Unable to login</div>
+        <div th:if="${param.logout}" class="logout-success">Logged out!</div>
         <form method="POST" th:action="@{/login}">
             <div class="form-row">
                 <div class="col-md-4 mb-3">
