--- a/nrakpo/src/main/resources/templates/register.html
+++ b/nrakpo/src/main/resources/templates/register.html
@@ -6,7 +6,7 @@
     <div th:replace="fragments :: header" ></div>
     <h1 text="Registration"></h1>
     <div th:if="${param.error}" class="validation-error" text="Unable to register."></div>
-    <form method="POST" th:action="@{/register}">
+    <form method="POST" th:action="@{/register}" th:object="${user}">
         <div class="form-row">
             <div class="col-md-4 mb-3">
                 <label for="username" text="Username" ></label>
@@ -16,38 +16,33 @@
         <div class="form-row">
             <div class="col-md-4 mb-3">
                 <label for="password" text="Password" ></label>
-                <input type="password" name="password" class="form-control"/>
+                <input type="password" th:field="*{password}" class="form-control"/>
             </div>
         </div>
         <div class="form-row">
             <div class="col-md-4 mb-3">
                 <label for="email" text="E-mail" ></label>
-                <input type="text" name="email" class="form-control" />
+                <input type="text" th:field="*{email}" class="form-control" />
             </div>
         </div>
-        <div class="form-row">
-            <div class="col-md-4 mb-3">
-                <label for="free">Free</label>
-                <input type="radio" id="free" name="userPackage" value="FREE" class="form-control" checked/>
 
-                <label for="pro">Pro</label>
-                <input type="radio" id="pro" name="userPackage" value="PRO" class="form-control" />
-
-                <label for="gold">Gold</label>
-                <input type="radio" id="gold" name="userPackage" value="GOLD" class="form-control" />
-            </div>
+        <div class="col-md-4 mb-3">
+            <label>User package: </label>
+            <select th:field="*{userPackage}" class="form-control" >
+                <option value="" >---Choose---</option>
+                <option th:each="package : ${userPackages}"
+                        th:value="${package}"
+                        th:text="${package}"></option>
+            </select>
         </div>
-        <div class="form-row">
-            <div class="col-md-4 mb-3">
-                <label for="local">Local</label>
-                <input type="radio" id="local" name="accountType" value="LOCAL" class="form-control" />
-
-                <label for="google">Google</label>
-                <input type="radio" id="google" name="accountType" value="GOOGLE" class="form-control" />
-
-                <label for="github">GitHub</label>
-                <input type="radio" id="github" name="accountType" value="GITHUB" class="form-control" />
-            </div>
+        <div class="col-md-4 mb-3">
+            <label>Account type: </label>
+            <select th:field="*{accountType}" class="form-control" >
+                <option value="" >---Choose---</option>
+                <option th:each="type : ${accountTypes}"
+                        th:value="${type}"
+                        th:text="${type}"></option>
+            </select>
         </div>
         <div class="form-row">
             <div class="col-md-4 mb-3">
