--- a/nrakpo/src/main/resources/templates/fragments.html
+++ b/nrakpo/src/main/resources/templates/fragments.html
@@ -45,7 +45,7 @@
     <th:block th:each="photo : ${photos}">
         <table>
             <tr>
-                <td><img th:src="${photo.url}"></td>
+                <td><img style="padding-left: 20px; width: 250px; display: inline-block" th:src="${photo.url}"></td>
                 <td th:text="${photo.description}"></td>
                 <td th:text="${photo.date}"></td>
                 <td th:text="${photo.username}"></td>
