--- a/nrakpo/src/main/resources/templates/fragments.html
+++ b/nrakpo/src/main/resources/templates/fragments.html
@@ -38,7 +38,7 @@
             <input type="submit" class="btn btn-danger" th:value="PictureUpload"/>
         </form>
     </div>
-    <div  sec:authorize="hasAuthority('ROLE_ADMIN')">
+    <div sec:authorize="hasAuthority('ROLE_ADMIN')">
         <form style="padding-right: 20px; font-size: 18px" method="GET" th:action="@{/users}">
             <input type="submit" class="btn btn-danger" th:value="ViewUsers"/>
         </form>
@@ -50,7 +50,8 @@
     <th:block th:each="photo : ${photos}">
         <table>
             <tr>
-                <td><a href=".../photo/${photo.id}"><img style="padding-left: 20px; width: 250px; display: inline-block" th:src="${photo.url}"></a></td>
+                <td><a th:href="'/photo/'+${photo.id}"><img style="padding-left: 20px; width: 250px; display: inline-block"
+                                                         th:src="${photo.url}"></a></td>
                 <td th:text="${photo.description}"></td>
                 <td th:text="${photo.date}"></td>
                 <td th:text="${photo.username}"></td>
@@ -59,6 +60,7 @@
         </table>
     </th:block>
 </div>
+
 
 <div th:fragment="users">
     <th:block th:each="user : ${users}">
