--- a/nrakpo/src/main/resources/templates/users.html
+++ b/nrakpo/src/main/resources/templates/users.html
@@ -10,7 +10,23 @@
     <h1 th:text="Home"></h1>
     <div th:if="${param.error}" class="login-error" th:text="Unable to login"></div>
     <div th:if="${param.logout}" class="logout-success" th:text="Logged out!"></div>
-    <div th:replace="fragments :: users"></div>
+
+    <th:block th:each="user : ${users}">
+        <table>
+            <tr>
+                <td th:text="${user.username}"></td>
+                <td th:text="${user.email}"></td>
+                <td th:text="${user.userPackage}"></td>
+                <td th:text="${user.accountType}"></td>
+                <td>
+                    <form method="GET" th:action="@{'/users/update/'+${user.username}}">
+                        <input type="submit" class="btn btn-danger" th:value="Update"/>
+                    </form>
+                </td>
+            </tr>
+        </table>
+    </th:block>
+
 </div>
 
 </body>
