--- a/nrakpo/src/main/resources/templates/photo_details.html
+++ b/nrakpo/src/main/resources/templates/photo_details.html
@@ -12,7 +12,7 @@
         <td th:text="${photo.date}"></td>
         <td th:text="${photo.username}"></td>
         <td th:text="${photo.hashtags}"></td>
-        <td th:text="${photo.size}"></td>
+        <td><label  th:text="${photo.sizeX}"></label><label>X</label><label th:text="${photo.sizeY}"></label></td>
         <td th:text="${photo.format}"></td>
     </tr>
     <tr>
