--- a/nrakpo/src/main/resources/templates/photo_update.html
+++ b/nrakpo/src/main/resources/templates/photo_update.html
@@ -29,7 +29,7 @@
             </tr>
             <tr>
                 <td><label>Size</label></td>
-                <td><input type="text" th:value="${photo.size}" name="size"></td>
+                <td><input type="text" th:value="${photo.sizeX}" name="sizeX"><label>X</label><input type="text" th:value="${photo.sizeY}" name="sizeY"></td>
             </tr>
             <tr>
                 <div class="col-md-4 mb-3">
