--- a/nrakpo/src/main/resources/templates/upload.html
+++ b/nrakpo/src/main/resources/templates/upload.html
@@ -23,7 +23,9 @@
         <div class="form-row">
             <div class="col-md-4 mb-3">
                 <label>Size: </label>
-                <input type="text" th:field="*{size}" class="form-control" />
+                <input type="text" th:field="*{sizeX}" class="form-control" />
+                <label>X</label>
+                <input type="text" th:field="*{sizeY}" class="form-control" />
             </div>
         </div>
         <div class="col-md-4 mb-3">
