--- a/nrakpo/src/main/resources/templates/home.html
+++ b/nrakpo/src/main/resources/templates/home.html
@@ -36,10 +36,10 @@
             <tr>
                 <td><a th:href="'/photo/'+${photo.id}"><img style="padding-left: 20px; width: 250px; display: inline-block"
                                                             th:src="${photo.url}"></a></td>
-                <td th:text="${photo.description}"></td>
-                <td th:text="${photo.date}"></td>
-                <td th:text="${photo.username}"></td>
-                <td th:text="${photo.hashtags}"></td>
+                <td><label th:text="${photo.description}"></label></td>
+                <td><label th:text="${photo.date}"></label></td>
+                <td><label  th:text="${photo.username}"></label></td>
+                <td><label th:text="${photo.hashtags}"></label></td>
             </tr>
         </table>
     </th:block>
