--- a/nrakpo/src/main/resources/templates/photo_details.html
+++ b/nrakpo/src/main/resources/templates/photo_details.html
@@ -4,16 +4,16 @@
 <head th:replace="fragments :: head"></head>
 
 <body>
-
+<div th:replace="fragments :: header"></div>
 <table>
     <tr>
         <td><img style="padding-left: 20px; width: 250px; display: inline-block" th:src="${photo.url}"></td>
-        <td th:text="${photo.description}"></td>
-        <td th:text="${photo.date}"></td>
-        <td th:text="${photo.username}"></td>
-        <td th:text="${photo.hashtags}"></td>
+        <td><label th:text="${photo.description}"></label></td>
+        <td><label th:text="${photo.date}"></label></td>
+        <td><label  th:text="${photo.username}"></label></td>
+        <td><label th:text="${photo.hashtags}"></label></td>
         <td><label  th:text="${photo.sizeX}"></label><label>X</label><label th:text="${photo.sizeY}"></label></td>
-        <td th:text="${photo.format}"></td>
+        <td><label  th:text="${photo.format}"></label></td>
     </tr>
     <tr>
         <div sec:authorize="isAuthenticated()">
