--- a/nrakpo/src/main/resources/templates/login.html
+++ b/nrakpo/src/main/resources/templates/login.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-
-<head th:replace="fragments :: head" ></head>
+<head th:replace="fragments :: head" >
+        <link th:href="@{/css/style.css}" rel="stylesheet">
+</head>
 
 <body>
-
+    <div th:replace="fragments :: header" style="border: 1px solid #e6e6e6"></div>
     <div class="container-fluid">
-        <div th:replace="fragments :: header" ></div>
         <h1 th:text="Login"></h1>
         <div th:if="${param.error}" class="login-error">Unable to login</div>
         <div th:if="${param.logout}" class="logout-success">Logged out!</div>
+        <div class="center-page">
         <form method="POST" th:action="@{/login}">
             <div class="form-row">
                 <div class="col-md-4 mb-3">
-                    <label for="username" th:text="Username" ></label>
+                    <label for="username" th:text="Username" ></label> :
                     <input value="username" type="text" name="username" class="form-control" />
                 </div>
             </div>
             <div class="form-row">
                 <div class="col-md-4 mb-3">
-                    <label for="password" th:text="Password" ></label>
+                    <label for="password" th:text="Password" ></label> :
                     <input value="123" type="password" name="password" class="form-control"/>
                 </div>
             </div>
             <div class="form-row">
-                <div class="col-md-4 mb-3">
+                <div class="col-md-3 mb-3"><br><br>
                     <input type="submit" th:value="Login" class="form-control btn btn-primary" />
                 </div>
             </div>
         </form>
-        <a th:href="@{/register}" class="btn btn-primary" th:text="Register"></a>
+    </div>
+    <br><br>
+        <a th:href="@{/register}" id="r-link" class="btn btn-primary" th:text="Register"></a>
     </div>
 
 </body>
