--- a/nrakpo/src/main/resources/static/css/style.css
+++ b/nrakpo/src/main/resources/static/css/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: #fafafa;
-
 }
+
 .container-fluid{
     padding: 20px 0px 20px 0px;
     width: 500px;
@@ -25,7 +25,7 @@ body{
 }
 
 .container-fluid form .btn{
-    border: 1px solid white;
+    border: 1px solid #fff;
     color: white;
     background-color: #007bff;
     transition: 0.3s ease-in-out;
@@ -64,3 +64,111 @@ body{
     font-weight: bold;
     margin: 0 auto;
 }
+
+.container-fluid1 {
+    width: 1000px;
+    background-color: #fff;
+    margin-top: 50px;
+    border: 1px solid #e6e6e6;
+    border-radius: 10px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.btn-danger:hover{
+    color: #dc3545;
+    border: 1px solid #dc3545;
+    background-color: #fff;
+}
+
+.media1 {
+    display: inline-block; 
+    width: 35%;
+}
+
+.media2{
+    text-align: right; 
+    display: inline-block; 
+    width: 20%;
+}
+
+.media3 {
+    text-align: right; 
+    display: inline-block; 
+    width: 20%;
+}
+
+.media4 {
+    text-align: right; 
+    display: inline-block; 
+    width: 25%;
+}
+
+.media5 {
+    text-align: right; 
+    display: inline-block; 
+    width: 65%;
+}
+.filters {
+    padding: 5px;
+    width: 25%;
+    float: left;
+}
+.filters1 {
+    padding: 5px;
+    width: 50%;
+    float: left;
+}
+
+
+.filter-button {
+    padding: 5px 20px 5px 20px; 
+    color: #fff;
+    background-color:rgb(0, 123, 255);
+    border:1px solid rgb(0, 123, 255); 
+    border-radius: 4px;letter-spacing: 1px;
+    transition: 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.filter-button:hover{
+    color:rgb(0, 123, 255);
+    border: 1px solid rgb(0, 123, 255);
+    background-color: #fff;
+    cursor: pointer;
+}
+
+
+/*za mobile view*/
+@media screen and (max-width: 1350px) {
+    .media1 {
+     padding-bottom: 10px;
+     width:100%;
+    }
+
+    .media2{
+        padding-left: 18px;
+        text-align: left; 
+        display: inline-block; 
+        width: 33%
+    }
+    
+    .media3 {
+        text-align: center; 
+        display: inline-block; 
+        width: 33%
+    }
+
+    .media4{
+        text-align: right; 
+        display: inline-block; 
+        width: 33%
+    }
+
+    .media5 {
+        text-align: center; 
+        display: inline-block; 
+        width: 100%;
+    }
+    
+  }
